--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -15,8 +15,6 @@ jobs:
       contents: write
     steps:
       - uses: lowlighter/metrics@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
         with:
           # Your GitHub token
           # The following scopes are required:
@@ -28,6 +26,7 @@ jobs:
           #  - repo          (optional, if you want to include private repositories)
 
           # Options
+          token: ${{ secrets.METRICS_TOKEN }}
           user: raihankhan
           template: classic
           base: header, activity, repositories, metadata
