Add stats and gist card generator
Signed-off-by: raihankhan <raihankhanraka@gmail.com>

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -6,7 +6,9 @@ on:
   schedule:
     - cron: '0 0 * * 6'
   # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
+  push:
+    branches:
+      - "master"
 
 jobs:
   github-metrics:
